--- a/react-example-plugin/package.json
+++ b/react-example-plugin/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite build --watch & vite preview",
+    "dev": "vite preview",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@penpot/plugin-styles": "^0.8.0",
     "@penpot/plugin-types": "^1.0.0",
     "react": "^18.2.0",
