--- a/react-example-plugin/public/manifest.json
+++ b/react-example-plugin/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "React example plugin",
-  "description": "Example plugin with react",
-  "code": "/plugin.js",
+  "name": "Real Data Filler",
+  "description": "Remplit automatiquement les champs texte avec des données fictives réalistes.",
+  "code": "/plugin.js", 
   "icon": "/icon.png",
-  "permissions": ["page:read", "content:read", "file:read", "selection:read"]
+  "permissions": ["page:read", "content:read", "content:write", "file:read", "selection:read", "library:read"]
 }
