--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-example-plugin",
+  "name": "Real Data Filler",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": {"name": "Adrien Sergent", "url": "https://www.linkedin.com/in/adriensergent/", "email": "adrien.sergent@airskill.fr"},
   "scripts": {
     "dev": "vite preview",
     "build": "tsc && vite build",
